kubernetes/apps/productivity/searxng/tailscale.yaml
apiVersion: v1
kind: Service
metadata:
  name: searxng-tailscale
  namespace: traefik
  annotations:
    # add new home service hostnames here as comma-separated values
    external-dns.alpha.kubernetes.io/hostname: search.tituslab.dev,searxng.tituslab.dev,searx.tituslab.dev
    external-dns.alpha.kubernetes.io/ttl: "60"
spec:
  type: LoadBalancer
  loadBalancerClass: tailscale
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - port: 443
      targetPort: 443
