kubernetes/apps/productivity/searxng/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: searxng
  namespace: productivity
  annotations:
    external-dns.alpha.kubernetes.io/controller: "ignore"
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - search.tituslab.dev
    - searxng.tituslab.dev
    - searx.tituslab.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: searxng-http
          port: 8080
